syntax = "proto3";

option csharp_namespace = "Messages";

message Employee {
	int32 id = 1;
	int32 badgeNumber = 2;
	string firstname = 3;
	string lastname = 4;
}

message GetAllRequest{
}

message GetByBadgeNumberRequest{
	int32 badgeNumber = 1;
}

message EmpoleeRequest{
	Employee employee = 1 ;
}

message EmpoleeResponse{
	Employee employee = 1 ;
}

message AddPhotoRequest{
	bytes data = 1 ;
}

message AddPhotoResponse{
	bool isOk = 1 ;
}

service EmployeeService{
	rpc GetByBadgeNumber(GetByBadgeNumberRequest) returns (EmpoleeResponse);
	rpc GetAll(GetAllRequest) returns (stream EmpoleeResponse);
	rpc Save(EmpoleeRequest) returns (EmpoleeResponse);
	rpc SaveAll(stream EmpoleeRequest) returns (stream EmpoleeResponse);
	rpc AddPhoto(stream AddPhotoRequest) returns (AddPhotoResponse);
}